tests pass, but h2 is not in use yet