@@ -1,2 +1,6 @@
 #!/bin/bash
-mvn package && java -cp entrypoint/target/CleanSandbox.jar com.example.entrypoint.Main
+mvn package \
+    && java \
+        --enable-preview \
+        -cp entrypoint/target/CleanSandbox.jar \
+        com.example.entrypoint.Main
